[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/background.wav" type="AudioStream" id=4]
[ext_resource path="res://Bomb.tscn" type="PackedScene" id=5]
[ext_resource path="res://Apple.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.516418, 1.17564, 0, 0, 0, 0, 0.394249, 0.261955, 0, 0, 0, 0, 600.104, 0.244013, 0, 0, 0, 0, -0.516418, 1.17564 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="BombTimer" type="Timer" parent="."]

[node name="AppleTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 300, 710 )

[node name="BombPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="BombSpawnLocation" type="PathFollow2D" parent="BombPath"]
position = Vector2( -0.516418, 1.17564 )
rotation = -0.198721

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Bomb" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Apple" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="BombTimer" to="." method="_on_BombTimer_timeout"]
[connection signal="timeout" from="AppleTimer" to="." method="_on_AppleTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
